--- a/apps/docs/content/docs/react/installation.mdx
+++ b/apps/docs/content/docs/react/installation.mdx
@@ -15,5 +15,6 @@ Choose your preferred package manager to install `@stepperize/react`:
 
 ## Next Steps
 
+- [My first stepper](/docs/react/my-first-stepper)
 - [API References](/docs/react/api-references/define)
 - [Examples](/docs/react/examples)
